--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
             <article class="card" data-service="Women & Child Helpline" data-number="109">
                 <div class="card-head">
-                    <div class="avatar"><img src="assets/heart.png" alt="Women & Child" /></div>
+                    <div class="avatar"><img src="assets/emergency.png" alt="Women & Child" /></div>
                     <button class="heart-btn" title="Add to favorite" aria-label="Add to favorite">
                         <img src="assets/heart.png" alt="Heart" />
                     </button>
@@ -140,7 +140,7 @@
 
             <article class="card" data-service="Anti-Corruption Helpline" data-number="106">
                 <div class="card-head">
-                    <div class="avatar"><img src="assets/coin.png" alt="Anti-Corruption" /></div>
+                    <div class="avatar"><img src="assets/emergency.png" alt="Anti-Corruption" /></div>
                     <button class="heart-btn" title="Add to favorite" aria-label="Add to favorite">
                         <img src="assets/heart.png" alt="Heart" />
                     </button>
@@ -159,7 +159,7 @@
 
             <article class="card" data-service="Electricity Outage" data-number="16216">
                 <div class="card-head">
-                    <div class="avatar"><img src="assets/darklogo.png" alt="Electricity" /></div>
+                    <div class="avatar"><img src="assets/emergency.png" alt="Electricity" /></div>
                     <button class="heart-btn" title="Add to favorite" aria-label="Add to favorite">
                         <img src="assets/heart.png" alt="Heart" />
                     </button>
