--- a/index.html
+++ b/index.html
@@ -218,8 +218,7 @@
         <aside class="history">
             <div class="history-head">
                 <div class="title">
-                    <img src="assets/emergency.png" alt="History Icon" />
-                    <span>Call History</span>
+                    <span>🕑 Call History</span>
                 </div>
                 <button id="clearHistory" class="btn btn-clear" type="button">Clear</button>
             </div>
